# X11workbenchProject

./: AUTHORS  BUILD  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README.md  X11workbench.1  X11workbench.c  X11workbench.h  X11workbench.interix  aclocal.m4  application_icon.xpm  clangdoc.xpm  configure  configure.ac  context_help.c  context_help.h  doxy.txt  doxy_comments.dox  doxy_footer.html  doxy_header.html  doxy_stylesheet.css  gdb_helper.c  gdb_helper.h  gizzard.c  gizzard.h  main_frame.c  main_frame.h  makefiledoc.xpm  mkdoc.sh  mkhello.sh  newdoc.xpm  refactor.c  refactor.h  resource_edit.c  resource_edit.h  (+2 more)
include/: X11WorkbenchToolkit_config.h.in  arrays.h  child_frame.h  conf_help.h  configure_checker.inl  debug_helper.h  dialog_controls.h  dialog_support.h  dialog_window.h  draw_text.h  edit_window.h  file_help.h  font_helper.h  frame_window.h  menu.h  menu_bar.h  menu_popup.h  pixmap_helper.h  platform_helper.h  text_object.h  window_dressing.h  window_helper.h
lib/: Makefile.am  Makefile.in  arrays.c  child_frame.c  clipboard_helper.c  conf_help.c  dialog_controls.c  dialog_impl.c  dialog_support.c  dialog_window.c  draw_text.c  edit_window.c  file_help.c  font_helper.c  font_legacy.c  frame_window.c  graphical_api.c  menu.c  menu_bar.c  menu_popup.c  pixmap_helper.c  platform_helper.c  text_object.c  window_dressing.c  window_helper.c
xpm/: icon_app.xpm  icon_bang.xpm  icon_barney.xpm  icon_bear.xpm  icon_death.xpm  icon_document.xpm  icon_finger.xpm  icon_folder.xpm  icon_ok.xpm  icon_skull.xpm  icon_splat.xpm  icon_stop.xpm  icon_thumbdown.xpm  icon_thumbup.xpm  icon_triangle.xpm  icon_warn.xpm  icon_what.xpm  icon_what_bold.xpm  icon_wtf.xpm
